# whisperlive-typer

./: .gitignore  Dockerfile  README.md  config.yaml.example  docker-compose.yml  flake.nix  pyproject.toml  run_server.sh  run_server_macos.py  whisper-typer.service  whisper_typer.py
macos/: __init__.py  com.whispertyper.client.plist  com.whispertyper.server.plist  karabiner-example.json  mlx_whisper_backend.py  pyproject.toml
patches/: __init__.py  add_miopen_cmake.sh  base.py  conv1d_gpu_miopen.cu
scripts/: setup.sh  setup_macos.sh  test_keys.py  toggle.sh  vad_calibrate.py
typing_platform/: __init__.py  base.py  linux.py  macos.py
whisper-typer-rs/: Cargo.toml
whisper-typer-rs/src/: audio.rs  client.rs  commands.rs  config.rs  grapheme.rs  main.rs  mute.rs  protocol.rs  server.rs  websocket.rs
whisper-typer-rs/src/typer/: dry_run.rs  linux.rs  macos.rs  mod.rs  platform.rs
