[project]
name = "whisper-typer"
version = "0.1.0"
description = "Speech-to-text typing using WhisperLive"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "sounddevice",
    "websockets",
    "pyyaml",
    "pyaudio",
    "packaging",
    "grapheme",
    "pynput; sys_platform == 'darwin'",
]
