[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-typer"
version = "0.1.0"
description = "Speech-to-text typing using WhisperLive"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "sounddevice",
    "websockets",
    "pyyaml",
    "pyaudio",
    "packaging",
    "grapheme",
    "pynput; sys_platform == 'darwin'",
]

[project.scripts]
whisper-typer = "whisper_typer:main"

[tool.setuptools]
py-modules = ["whisper_typer"]
packages = ["typing_platform"]
