[package]
name = "whisper-typer"
version = "0.1.0"
edition = "2024"
description = "Speech-to-text typing client using WhisperLive"

[[bin]]
name = "whisper-typer"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
futures-util = "0.3.32"

# Audio capture
cpal = "0.17"

# WebSocket
tokio-tungstenite = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Unicode
unicode-segmentation = "1.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# macOS keyboard simulation
[target.'cfg(target_os = "macos")'.dependencies]
enigo = "0.6"
